--- a/styles/App.css
+++ b/styles/App.css
@@ -100,6 +100,56 @@ button:disabled {
   height: 35px;
 }
 
+
+:root {
+  /* galaxy image from https://unsplash.com/s/photos/galaxy */
+  --bg-image: url('https://images.unsplash.com/photo-1538370965046-79c0d6907d47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80');
+}
+
+
+.cat-logo {
+  width: 200px;
+  height: 200px;
+}
+
+.card body {
+  background-color: #1D1E22;
+  font-family: sans-serif;
+  display: flex;
+}
+
+.card {
+  margin: 1rem;
+  padding: 1rem;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  backdrop-filter: blur(14px);
+  background-color: rgb(255, 0, 0);
+  border-radius: 10px;
+}
+
+.bg-blur {
+  overflow: hidden;
+  background-color: transparent;
+}
+
+.bg-blur::before {
+  content: '';
+  background-image: var(--bg-image);
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  filter: blur(30px);
+  z-index: -1;
+}
+
 .footer-text {
   font-size: 16px;
   font-weight: bold;
