--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  max-width: 320px;
+  width: 290px;
   height: 400px;
   background-color: #141414;
   margin: 15px;
@@ -15,6 +15,7 @@
 
 .product_image{
   width: 140px;
+  height: 200px;
   background-color: #141414;
 }
 
@@ -47,8 +48,10 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  
 }
 
 .product_price{
   font-size: 1.3em;
+  padding-right: 10px;
 }
