--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -5,17 +5,28 @@
   align-items: center;
   max-width: 320px;
   height: 400px;
-  background-color: #141414;
   margin: 15px;
   padding: 20px;
   border-radius: 16px;
   border: 1px solid rgb(104, 104, 104);
-  /* background: url('../public/blur-bg.png') */
+  background: url('../public/blur-bg.png')
+}
+
+.product_card{
+  background: url('../public/blur-bg.png');
+  opacity: .9;
+  margin: 2px;
+  padding: 10px;
+  min-height: 375px;;
+  min-width: 300px;
+  max-height: 375px;
+  max-width:300px;
 }
 
 .product_image{
   width: 140px;
   background-color: #141414;
+  max-height: 180px;
 }
 
 .product_details{
@@ -38,7 +49,9 @@
   margin-bottom: 12px;
 }
 .product_description{
-  color:rgb(186, 184, 184);
+  margin-top: 10px;
+  color:rgb(0, 0, 0);
+  font-weight: bold;
 }
 
 .product_action{
@@ -51,4 +64,5 @@
 
 .product_price{
   font-size: 1.3em;
+  padding-left: 10px;
 }
