--- a/styles/App.css
+++ b/styles/App.css
@@ -11,21 +11,65 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 30px 0 30px;
-  color: white;
+  background-color:  black;
   position: relative;
 }
 
 .authed-container {
   height: 100%;
   display: flex;
-  flex-direction: column;
-  padding: 30px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 15;
+  left: 0;
+  right: 0;
 }
 
 .header {
   margin: 0;
   font-size: 50px;
   font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: white;
+  top: 0 px;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.middle {
+  margin: 0;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: white;
+  width: 100%;
+  height: 50%;
+  position: fixed;
+  margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
+  left: 0;
+  right: 0;
+}
+
+.middle-row {
+  margin: 0;
+  font-weight: bold;
+  flex-direction: row;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: white;
+  top:10%;
+  left: 20%;
+  right: 20%;
 }
 
 .sub-text {
@@ -56,11 +100,12 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
+  color: 'transparent';
 }
 
 .connect-wallet-button {
   color: white;
-  background: -webkit-linear-gradient(left, #ff8867, #ff52ff);
+  background: -webkit-linear-gradient(left, #60c657, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
   max-width: 300px;
