--- a/styles/App.css
+++ b/styles/App.css
@@ -39,12 +39,11 @@
   -webkit-text-fill-color: transparent;
 }
 
-.button-container{
+.button-container {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  
 }
 .cta-button {
   height: 45px;
@@ -79,7 +78,7 @@ button:disabled {
   color: #333;
 }
 
-.item-image{
+.item-image {
   height: 100px;
 }
 
@@ -106,7 +105,7 @@ button:disabled {
   color: white;
 }
 
-.connected-container input[type='text'] {
+.connected-container input[type="text"] {
   display: inline-block;
   padding: 10px;
   width: 50%;
@@ -143,7 +142,7 @@ button:disabled {
   cursor: pointer;
 }
 
-.create-product-button{
+.create-product-button {
   margin: 10px;
   border: 0;
   font-size: 20px;
@@ -152,14 +151,15 @@ button:disabled {
   top: 20px;
   right: 20px;
   cursor: pointer;
-  color:white;
+  color: white;
   background-color: transparent;
   transition: all 0.3s ease;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   z-index: 1;
 }
 
-.products-container{
+.products-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
