--- a/styles/CreateProduct.module.css
+++ b/styles/CreateProduct.module.css
@@ -1,4 +1,4 @@
-.background_blur{
+.background_blur {
   background-image: url(../public/blur-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,8 @@
 }
 
 .create_product_container {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   position: fixed;
   top: 50%;
@@ -74,7 +75,8 @@
   box-sizing: border-box;
   margin: 10px 0;
   width: 48%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .input[type="file"] {
@@ -111,7 +113,7 @@
   width: 100%;
 }
 
-.flex_full_row{
+.flex_full_row {
   display: flex;
   width: 100%;
   align-items: center;
@@ -132,5 +134,6 @@
   box-sizing: border-box;
   margin: 10px 0;
   width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
